--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,8 +26,7 @@
                 <label class="register-para" for="password"><b>{{ form.password.label }}</b></label><br>
                 {{ form.password(size=32) }}<br>
             </p>
-            <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-            <button class="form-button" type="submit"><p>{{ form.submit() }}</p></button>
+            <button class="form-button" type="submit">Submit</button>
         </div>
 
         <div class="form-bottom">
