--- a/app/templates/playercreate.html
+++ b/app/templates/playercreate.html
@@ -33,7 +33,7 @@
 				<label class="register-para" for="club"><b>{{ form.club.label }}</b></label><br>
 				{{ form.club(size=32) }}<br>
 			</p>
-			<p>{{ form.submit() }}</p>
+			<button type="submit" class="form-button">Submit</button>
 		</div>
 
 		<div class="form-bottom">
