--- a/app/templates/pollcreate.html
+++ b/app/templates/pollcreate.html
@@ -34,7 +34,7 @@
             {{ form.select3 }}<br>
             
             <hr>
-            <button type="submit" class="form-button">{{ form.submit() }}</button>
+            <button type="submit" class="form-button">Submit Poll</button>
         </div>
         {% if current_user.is_anonymous %}
         <div class="form-bottom">
