--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -23,12 +24,12 @@
                     <li><a href="{{ url_for('polllist') }}">Polls</a></li>
                     <li><a href="{{ url_for('playerlist') }}">Players</a></li>
                     {% if current_user.admin %}
-                        <li><a href="{{ url_for('admin') }}">Admin</a></li>
+                    <li><a href="{{ url_for('admin') }}">Admin</a></li>
                     {% endif%}
                     {% if current_user.is_anonymous %}
                     <li><a id="active" href="{{ url_for('login') }}">Login</a></li>
-                    {% else %}    
-                        <a id="active" href="{{ url_for('logout') }}">Logout</a>
+                    {% else %}
+                    <li><a id="active" href="{{ url_for('logout') }}">Logout</a></li>
                     {% endif %}
 
                 </ul>
@@ -49,7 +50,7 @@
 
 
 
-    
+
     <div>
         {% block content %}
         {% endblock %}
