--- a/app/templates/unauthorised.html
+++ b/app/templates/unauthorised.html
@@ -1,8 +1,9 @@
 {% extends "base2.html" %}
 
 {% block content %}
-    <h1>Unauthorised Action</h1>
+<div  class = "center table-container"> <h1>Unauthorised Action</h1>
 
-    <a href="{{ url_for('index') }}" class="button"> Go Back Home </a>
+    <a href="{{ url_for('index') }}" class="button"> Go Back Home </a></div>
+ 
     
 {% endblock %}
