--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -133,7 +133,7 @@ footer p {
   padding: 0;
   width: 100%;
   height: 100vh;
-  background: url(me.jpg) no-repeat center/cover;
+  background: url(../images/me.jpg) no-repeat center/cover;
   background-size: cover;
   position: relative;
   overflow-y: hidden;
