--- a/app/templates/pollcreate.html
+++ b/app/templates/pollcreate.html
@@ -10,29 +10,28 @@
             <hr>
             {{ form.hidden_tag() }}
             {% for error in form.pollname.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+            <spa>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="pollname"><b>{{ form.pollname.label }}</b></label><br>
-            {{ form.pollname(size=32) }}<br>
-
+            <input type="text" placeholder="Pollname" name="pollname" required></input<br>
+            <br>
             {% for error in form.select1.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+            <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="select1"><b>{{ form.select1.label }}</b></label><br>
             {{ form.select1}}<br>
 
             {% for error in form.select2.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+            <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="select2"><b>{{ form.select2.label }}</b></label><br>
             {{ form.select2 }}<br>
             
             {% for error in form.select3.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+            <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="select3"><b>{{ form.select3.label }}</b></label><br>
             {{ form.select3 }}<br>
-            
             <hr>
             <button type="submit" class="form-button">Submit Poll</button>
         </div>
