--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -62,6 +62,12 @@ body {
   color: #333;
 }
 
+.form-container span,
+.form-container2 span,
+.form-container3 span {
+  color: red;
+}
+
 /* section contents */
 
 .vertical-line {
@@ -133,7 +139,7 @@ footer p {
   padding: 0;
   width: 100%;
   height: 100vh;
-  background: url(../images/me.jpg) no-repeat center/cover;
+  background: url(me.jpg) no-repeat center/cover;
   background-size: cover;
   position: relative;
   overflow-y: hidden;
@@ -252,6 +258,11 @@ nav ul li a:hover {
 /* Navbar/header code ends */
 
 /* login and register form styling */
+
+.fieldset.inlineLabels ul {
+  list-style: none;
+  text-align: left;
+}
 
 .form-wrapper {
   margin: 12rem 22rem;
@@ -476,7 +487,7 @@ hr {
 /* table styling finish  */
 
 .height {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   max-width: 960px;
   margin: auto;
   overflow: hidden;
@@ -487,9 +498,8 @@ hr {
 }
 
 .viewpoll-spacing2 {
-  padding: 2rem 2rem 0 2rem;
+  padding: 0 2rem 3rem 2rem;
 }
-
 
 .chart-container{
    /* height:400px; */
