--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -25,7 +25,7 @@
             <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="email"><b>{{ form.email.label }}</b></label><br>
-            <input type="text" placeholder="Email" name="email" required></input<br>
+            <input type="email" placeholder="Email" name="email" required></input<br>
             
             <!--
             <input type="email" placeholder="Enter Email" name="email" required>
