--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -62,12 +62,6 @@ body {
   color: #333;
 }
 
-.form-container span,
-.form-container2 span,
-.form-container3 span {
-  color: red;
-}
-
 /* section contents */
 
 .vertical-line {
@@ -139,7 +133,7 @@ footer p {
   padding: 0;
   width: 100%;
   height: 100vh;
-  background: url(me.jpg) no-repeat center/cover;
+  background: url(../images/me.jpg) no-repeat center/cover;
   background-size: cover;
   position: relative;
   overflow-y: hidden;
@@ -259,9 +253,13 @@ nav ul li a:hover {
 
 /* login and register form styling */
 
-.fieldset.inlineLabels ul {
+fieldset.inlineLabels ul {
   list-style: none;
-  text-align: left;
+  padding-left: 0;
+}
+
+fieldset.inlineLabels {
+  border: none;
 }
 
 .form-wrapper {
@@ -350,6 +348,16 @@ hr {
 
 .form-wrapper2 h2 {
   font-size: 24px;
+}
+
+.form-container span,
+.form-container2 span,
+.form-container3 span {
+  color: red;
+}
+
+.dropdown {
+  margin: 5px 0 17px 0;
 }
 
 /* table styling  */
