--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Soccer Polls</title>
+    </head>
 {% extends "base.html" %}
 
 {% block content %}
 
-<body>
 <section class="content-polls-users green-background">
     <div class="content grid-2 center">
       <div class="vertical-line">
@@ -56,5 +60,5 @@
     </div>
   </section>
 {% endblock %}
-</body>
+
 </html>
