--- a/app/templates/poll.html
+++ b/app/templates/poll.html
@@ -1,4 +1,10 @@
-{% extends "base2.html" %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>{{poll.pollname}}</title>
+    </head>
+    {% extends "base2.html" %}
 
 {% block content %}
 
@@ -164,3 +170,4 @@
 
 
 {% endblock %}
+</html>
