--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>
+            Login Page
+        </title>
+    </head>
 {% extends "base2.html" %}
 
 {% block content %}
@@ -5,7 +13,7 @@
 <div class="form-wrapper">
     <h2 class="login-header">Login Form</h2>
 
-    <form class="form" action="" method="post" onsubmit="return validateForm(this)">
+    <form class="form" method="post" onsubmit="return validateForm(this)">
         <div class="login-icon fa-3x">
             <i class="fas fa-users"></i>
         </div>
@@ -16,7 +24,7 @@
                 <span>[{{ error }}]</span>
                 {% endfor %}
                 <label class="register-para" for="username"><b>{{ form.username.label }}</b></label><br>
-                <input type="text" placeholder="Username" name="username" required></input<br>
+                <input id="username" type="text" placeholder="Username" name="username" required>
 
             </p>
             <p>
@@ -31,7 +39,7 @@
                 <span>[{{ error }}]</span>
                 {% endfor %}
                 <label class="register-para" for="password"><b>{{ form.password.label }}</b></label><br>
-                <input type="password" placeholder="Password" name="password" required></input<br>
+                <input id="password" type="password" placeholder="Password" name="password" required>
 
             </p>
             <button class="form-button" type="submit">Submit</button>
@@ -43,3 +51,4 @@
     </form>
 </div>
 {% endblock %}
+</html>
