--- a/app/templates/playerlist.html
+++ b/app/templates/playerlist.html
@@ -1,4 +1,10 @@
-{% extends "base2.html" %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+		<meta charset="utf-8">
+		<title>Players List</title>
+	</head>
+	{% extends "base2.html" %}
 
 {% block content %}
 <div class="table-container">
@@ -28,6 +34,5 @@
 	<a href="{{ url_for('playercreate')}}" class="otherbtn">Add New Player </a>
 </div>
 
-
-
 {% endblock %}
+</html>
