--- a/app/templates/polllist.html
+++ b/app/templates/polllist.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>
+          Polls List
+        </title>
+    </head>
 {% extends "base2.html" %}
 
 {% block content %}
