--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,4 +1,10 @@
-{% extends "base2.html" %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Sign Up</title>
+    </head>
+    {% extends "base2.html" %}
 
 {% block content %}
 
@@ -16,7 +22,7 @@
             <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="username"><b>{{ form.username.label }}</b></label><br>
-            <input id="username" type="text" placeholder="Username" name="username" required></input<br>
+            <input id="username" type="text" placeholder="Username" name="username" required>
             
             <!--
             <input type="text" placeholder="Enter Username" name="username" required>
@@ -25,7 +31,7 @@
             <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="email"><b>{{ form.email.label }}</b></label><br>
-            <input id="email" type="text" placeholder="Email" name="email" required></input<br>
+            <input id="email" type="text" placeholder="Email" name="email" required>
             
             <!--
             <input type="email" placeholder="Enter Email" name="email" required>
@@ -34,7 +40,7 @@
             <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="password"><b>{{ form.password.label }}</b></label><br>
-            <input id="password" type="password" placeholder="Password" name="password" required></input<br>
+            <input id="password" type="password" placeholder="Password" name="password" required>
 
             <!--
             <input type="password" placeholder="Enter Password" name="password" required>
@@ -43,7 +49,7 @@
             <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="password2"><b>{{ form.password2.label }}</b></label><br>
-            <input id="password2" type="password" placeholder="Confirm Password" name="password2" required></input<br>
+            <input id="password2" type="password" placeholder="Confirm Password" name="password2" required>
             
             <hr>
             <button type="submit" class="form-button">Submit Response</button>
@@ -56,3 +62,4 @@
     </form>
 </div>
 {% endblock %}
+</html>
