--- a/app/templates/unauthorised.html
+++ b/app/templates/unauthorised.html
@@ -1,4 +1,10 @@
-{% extends "base2.html" %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Unauthorised Access</title>
+    </head>
+    {% extends "base2.html" %}
 
 {% block content %}
 <div  class = "center table-container"> <h1>Unauthorised Action</h1>
@@ -7,3 +13,4 @@
  
     
 {% endblock %}
+</html>
