--- a/app/templates/usercreate.html
+++ b/app/templates/usercreate.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>New User Creation</title>
+</head>
 {% extends "base2.html" %}
 
 {% block content %}
@@ -6,7 +12,7 @@
 
 <!---->
 <div class="form-wrapper">
-    <form class="form" action="" method="post" onsubmit="return validateForm(this)">
+    <form class="form" method="post" onsubmit="return validateForm(this)">
         <div class="form-container">
             <h1 class="register-head">User Creation Form</h1>
             <p class="register-para">Please fill in this form to create an account.</p>
@@ -16,15 +22,15 @@
             <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="username"><b>{{ form.username.label }}</b></label><br>
-            <input type="text" placeholder="Username" name="username" required></input<br>
-            
-        
+            <input id="username" type="text" placeholder="Username" name="username" required>
+
+
             {% for error in form.email.errors %}
             <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="email"><b>{{ form.email.label }}</b></label><br>
-            <input type="text" placeholder="Email" name="email" required></input<br>
-            
+            <input id="email" type="text" placeholder="Email" name="email" required>
+
             <!--
             <input type="email" placeholder="Enter Email" name="email" required>
             -->
@@ -32,8 +38,8 @@
             <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="password"><b>{{ form.password.label }}</b></label><br>
-            <input type="password" placeholder="Password" name="password" required></input<br>
-            
+            <input id="password" type="password" placeholder="Password" name="password" required>
+
             <!--
             <input type="password" placeholder="Enter Password" name="password" required>
             -->
@@ -41,12 +47,13 @@
             <span>[{{ error }}]</span>
             {% endfor %}
             <label class="register-para" for="password2"><b>{{ form.password2.label }}</b></label><br>
-            <input type="password" placeholder="Confirm Password" name="password2" required></input<br>
-            
+            <input id="password2" type="password" placeholder="Confirm Password" name="password2" required>
+
             <hr>
             <button type="submit" class="form-button">Submit</button>
-            
+
         </div>
     </form>
 </div>
 {% endblock %}
+</html>
