--- a/app/templates/pollcreate.html
+++ b/app/templates/pollcreate.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 <div class="form-wrapper">
-    <form class="form" method="post" onsubmit="return validateForm(this)">
+    <form class="form" method="post" onsubmit="return validateForm2(this)">
         <div class="form-container">
             <h1 class="register-head">Create New Poll</h1>
             <p class="register-para">Please fill in this form to create a new poll.</p>
