Javascript validation for create new player form

--- a/app/templates/playercreate.html
+++ b/app/templates/playercreate.html
@@ -13,7 +13,7 @@
 
 <!--start-->
 <div class="form-wrapper">
-	<form class="form" method="post" onsubmit="return validateForm(this)">
+	<form class="form" method="post" onsubmit="return validateForm4(this)">
 		<div class="form-container">
 			<h1 class="register-head">Add new player</h1>
 			<p class="register-para">Fill in this form to add a new player to the database</p>
