--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,13 +29,10 @@
           Users <i class="fas fa-users"></i> <i class="fas fa-user-secret"></i>
         </h2>
         <p>
-          Want to know if people also think Cristiano Ronaldo is the best player in
-          the world? Well, you are in the right place! View current and exciting soccer
-          polls now, by clicking the 'View Polls' button below. Or if you want to make
-          a poll of your own, Login below and get creative!
-          Right poll was for predictions of the 2010 World Cup Winner
+          Our player database has 20 of the top ranked football players in current times.
+          View the list and add see if your favourite is in there. If not, feel free to add them in!
         </p>
-        <a href="{{ url_for('login') }}" class="button"> Login </a>
+        <a href="{{ url_for('playerlist') }}" class="button"> Players List </a>
       </div>
     </div>
   </section>
