edit flashed message

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
 
       <div>
         <h2 class="content-head">
-          Users <i class="fas fa-users"></i> <i class="fas fa-user-secret"></i>
+          Players <i class="fas fa-users"></i> <i class="fas fa-user-secret"></i>
         </h2>
         <p>
           Our player database has 20 of the top ranked football players in current times.
