--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,11 @@
     <div id="Homepage-header">
         <header>
             <nav class="navbar">
+                {% if current_user.is_anonymous %}
                 <div class="logo">Soccer Polls</div>
+                {%else%}
+                <div class="logo">Soccer Polls - {{current_user.username}}</div>
+                {% endif%}
                 <ul>
                     <li><a href="{{ url_for('index')}}">Home</a></li>
                     <li><a href="{{ url_for('polllist') }}">Polls</a></li>
